inputs and buttons added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 			<h1>Hipoteca Calculator</h1>
 		</div>
 		<div data-role="content">
-			home
+			<h2 id='resultado'></h2>
+			<label for='dinero'>Dinero solicitado</label><input id='dinero' type='text'>
+			<label for='interes'>Interés</label><input id='interes' type='text'>
+			<label for='años'>Años</label><input id='años' type='text'>
+			<a data-role="button" id='calcular'>Calcular</a>
 		</div>
 		<div data-role="footer" data-position="fixed">
 			<h4>@aasensiog</h4>
